--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <!-- Sobre Section -->
 <section id="sobre" class="section">
   <h2>Sobre Mim</h2>
-  <p>Oi, meu nome é Vinicius. Atualmente estou focado em alguns objetivos bem importantes na minha vida profissional. Sou apaixonado por tecnologia, especialmente TI, e também tenho um grande interesse pelas Forças Armadas. Além disso, sou louco por motos, principalmente as com mais de 3 cilindros. Se eu pudesse, já teria uma Kawasaki Z900 ou uma CB650, essas motos são um sonho para mim!</p>
+  <p>Oi, meu nome é Vinicius. Atualmente estou focado em alguns objetivos bem importantes na minha vida profissional. Sou apaixonado por tecnologia, especialmente TI, e também tenho um grande interesse pelas Forças Armadas. Além disso,eu gosto motos, principalmente as com 4 cilindros com o som esportivo íncrivel. Se eu pudesse, já teria uma Kawasaki Z900 ou uma CB650.</p>
 </section>
 
 <!-- Interesses Section -->
