--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
+      color: black;
       transition: background-color 0.3s ease, color 0.3s ease;
     }
-    
+
     header {
       background-color: #333;
       color: white;
@@ -151,13 +152,44 @@
       background-color: #666;
     }
 
+    /* Tema Escuro */
+    .dark-theme {
+      background-color: #222;
+      color: white;
+    }
+    .dark-theme header {
+      background-color: #444;
+    }
+    .dark-theme nav {
+      background-color: #444;
+    }
+    .dark-theme nav a:hover {
+      background-color: #555;
+      color: white;
+    }
+    .dark-theme .section {
+      background-color: #333;
+      color: white;
+    }
+    .dark-theme .footer {
+      background-color: #444;
+    }
+    .dark-theme .footer i {
+      color: white;
+    }
+
+    /* Modo Daltonico */
+    .color-blind {
+      background-color: #d5d5d5;
+      color: #333;
+    }
   </style>
 </head>
 <body>
 
 <header>
   <h1>Bem-vindo ao Meu Site Pessoal</h1>
-  <p>Aqui você encontra informações sobre meus objetivos e interesses!</p>
+  <p>Aqui você encontra informações sobre meus objetivos e interesses</p>
 </header>
 
 <nav>
@@ -180,7 +212,7 @@
 <!-- Sobre Section -->
 <section id="sobre" class="section">
   <h2>Sobre Mim</h2>
-  <p>Oi, meu nome é Vinicius. Atualmente estou focado em alguns objetivos bem importantes na minha vida profissional. Sou apaixonado por tecnologia, especialmente TI, e também tenho um grande interesse pelas Forças Armadas. Além disso,eu gosto motos, principalmente as com 4 cilindros com o som esportivo íncrivel. Se eu pudesse, já teria uma Kawasaki Z900 ou uma CB650.</p>
+  <p>Oi, meu nome é Vinicius. Atualmente estou focado em alguns objetivos bem importantes na minha vida profissional. Tenho interesse pela por tecnologia, especialmente TI, e também tenho um grande interesse pelas Forças Armadas. Além disso,eu gosto motos, principalmente as com 4 cilindros com o som esportivo incrível. Se eu pudesse, já teria uma Kawasaki Z900 ou uma CB650.</p>
 </section>
 
 <!-- Interesses Section -->
@@ -189,15 +221,15 @@
   <div class="content-container">
     <div class="content-box">
       <h3>Tecnologia (TI)</h3>
-      <p>Estou sempre buscando aprender mais sobre computadores, redes e programação. Queria muito me aprofundar e crescer na área. Acho que o futuro da tecnologia é incrível e quero estar lá, vivendo isso.</p>
+      <p>A tecnologia sempre me fascinou. O mundo da computação, redes e programação é algo que me atrai profundamente. Eu sempre estou procurando aprender mais, entender como as coisas funcionam e como posso contribuir para esse futuro inovador.</p>
     </div>
     <div class="content-box">
       <h3>Forças Armadas</h3>
-      <p>Eu acho que as Forças Armadas podem me dar a chance de crescer como pessoa e profissional, por isso estou pensando em me alistar e me preparar para o que vier pela frente.</p>
+      <p>Tenho um respeito muito grande pelas Forças Armadas. Vejo nelas a oportunidade de crescimento pessoal e profissional. Estou seriamente pensando em me alistar, para me desenvolver como ser humano e também para abraçar essa carreira tão honrada.</p>
     </div>
     <div class="content-box">
       <h3>Motos</h3>
-      <p>Ter uma moto com motor forte, tipo uma Z900, é meu sonho. Não só pelo desempenho, mas pela liberdade que a moto traz. Essa sensação de estar livre, indo aonde você quer.</p>
+      <p>Desde que me entendo por gente, sou apaixonado por motos. Não é só pela velocidade, mas pela liberdade que elas proporcionam. Meu sonho é ter uma moto como a Kawasaki Z900, para sentir essa sensação incrível de estar no controle de algo tão poderoso.</p>
     </div>
   </div>
 </section>
@@ -205,25 +237,25 @@
 <!-- Objetivos para este Ano -->
 <section id="objetivos-ano" class="section">
   <h2>Objetivos para este Ano</h2>
-  <p>Este ano, meu foco é conseguir realizar alguns dos meus sonhos mais imediatos. Esses são meus objetivos para 2025:</p>
+  <p>Este ano, meus principais objetivos são:</p>
   <ul>
     <li>Fazer o ENEM e tentar uma vaga em uma universidade.</li>
-    <li>Criar coragem para me inscrever no teste para o Colégio Naval.</li>
-    <li>Comprar um controle novo para meu PS5.</li>
-    <li>Conseguir um celular novo.</li>
-    <li>Comprar um notebook para poder estudar e me divertir ao mesmo tempo.</li>
-    <li>Se lançar o GTA VI este ano, vou juntar grana para poder comprar!</li>
+    <li>Me inscrever no teste para o Colégio Naval.</li>
+    <li>Comprar um novo controle para o meu PS5.</li>
+    <li>Adquirir um celular novo.</li>
+    <li>Comprar um notebook para estudar e me divertir ao mesmo tempo.</li>
+    <li>Se o GTA VI for lançado, juntar dinheiro para comprar o jogo.</li>
   </ul>
 </section>
 
 <!-- Objetivos Futuros -->
 <section id="objetivos-futuros" class="section">
   <h2>Objetivos para o Futuro</h2>
-  <p>Para o futuro, eu tenho planos grandiosos. Aqui estão alguns deles:</p>
+  <p>Meus objetivos para o futuro são grandes e cheios de ambição. Aqui estão alguns deles:</p>
   <ul>
-    <li>Ter a minha própria casa, com a minha moto na garagem.</li>
-    <li>Conquistar independência financeira e estar bem estabelecido na minha carreira.</li>
-    <li>Viajar pelo mundo, conhecendo lugares e culturas diferentes.</li>
+    <li>Ter minha própria casa, com a moto que sempre sonhei na garagem.</li>
+    <li>Conquistar independência financeira e estabelecer uma carreira sólida.</li>
+    <li>Viajar pelo mundo, conhecer diferentes culturas e viver novas experiências.</li>
   </ul>
 </section>
 
